--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									</a></h2>
 									<p>Marketing Analysis Dataset Analyzed in Jupyter Notebook.</p>
 								</header>
-								<a href="https://github.com/dovicbravo/marketingdataproject/blob/main/Marketing%20Data%20Analysis%20Project.ipynb" class="image main"><img src="images/marketing.jpg" alt="" /></a>
+								<a href="https://nbviewer.org/github/dovicbravo/marketingdataproject/blob/main/Marketing%20Data%20Analysis%20Project.ipynb" class="image main"><img src="images/marketing.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/dovicbravo/marketingdataproject/blob/main/Marketing%20Data%20Analysis%20Project.ipynb" class="button large">View Project</a></li>
+									<li><a href="https://nbviewer.org/github/dovicbravo/marketingdataproject/blob/main/Marketing%20Data%20Analysis%20Project.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
